# receipt-reconciliation

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_TEST_RESULTS.md  MANUAL_TEST_RESULTS.md  PRE_SUBMISSION_CHECKLIST.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  START_DOCKER.md  STRUCTURE_FIXED.md  VALIDATION_REPORT.md  app.py  inference.py  manual-test.ps1  pyproject.toml  quick-start.ps1  setup.ps1  setup.sh  smoke_test.py  test_api_direct.py  test_bug_condition.py  test_endpoints.py  test_env_step.py  test_inference_format.py  test_preservation.py  test_score_bounds.py  validate-simple.ps1  validate.ps1
receipt-reconciliation/: README.md  app.py  openenv.yaml  requirements.txt
receipt-reconciliation/api/: main.py
receipt-reconciliation/environment/: __init__.py  env.py  models.py  tasks.py
receipt_reconciliation/: __init__.py
receipt_reconciliation/server/: __init__.py  app.py
server/: app.py
