[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "receipt-reconciliation"
version = "1.0.0"
description = "An AI agent environment for receipt reconciliation investigation"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Receipt Reconciliation Team", email = "team@receipt-recon.dev"}
]
keywords = ["openenv", "receipt", "reconciliation", "audit", "ai", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "openai>=1.40.0",
    "requests==2.31.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/vinaykotha5/receipt-reconciliation"
Repository = "https://github.com/vinaykotha5/receipt-reconciliation.git"
Documentation = "https://github.com/vinaykotha5/receipt-reconciliation/blob/main/README.md"

[tool.setuptools]
packages = ["receipt_reconciliation"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
